--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -10,6 +10,7 @@
     "generate:transactions": "tsx --tsconfig ./tsconfig.scripts.json ./src/data/generateData.ts"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
     "@internationalized/date": "^3.6.0",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-checkbox": "^1.1.3",
@@ -35,6 +36,7 @@
     "@typescript-eslint/parser": "^8.19.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "dayjs": "^1.11.13",
     "geist": "^1.3.1",
     "lucide-react": "^0.471.0",
     "next": "14.2.23",
