--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.2.0",
     "@internationalized/date": "^3.6.0",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-checkbox": "^1.1.3",
@@ -29,23 +30,29 @@
     "@react-aria/datepicker": "^3.12.0",
     "@react-stately/datepicker": "^3.11.0",
     "@remixicon/react": "^4.6.0",
+    "@tabler/icons-react": "^3.31.0",
     "@tailwindcss/forms": "^0.5.10",
     "@tanstack/react-table": "^8.20.6",
     "@tremor/react": "^3.18.7",
     "@typescript-eslint/parser": "^8.19.1",
     "clsx": "^2.1.1",
+    "cobe": "^0.6.3",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.13",
+    "framer-motion": "^12.6.2",
     "geist": "^1.3.1",
     "lucide-react": "^0.471.0",
+    "mini-svg-data-uri": "^1.4.4",
+    "motion": "^12.5.0",
     "next": "14.2.23",
     "next-themes": "^0.4.4",
     "nuqs": "^2.3.0",
     "react": "^18.3.1",
     "react-datepicker": "^8.1.0",
-    "react-day-picker": "^8.10.1",
+    "react-day-picker": "^9.6.3",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
+    "react-hook-form": "^7.54.2",
     "recharts": "^2.15.0",
     "tailwind-merge": "^2.6.0",
     "tailwind-variants": "^0.3.0",
