--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
-    "@heroicons/react": "^2.2.0",
+    "@heroicons/react": "v1",
     "@internationalized/date": "^3.6.0",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-checkbox": "^1.1.3",
