--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -3,16 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "NEXT_IGNORE_TYPECHECK_ERRORS=1 next build",
     "start": "next start",
-    "lint": "next lint",
-    "export": "next build && next export"
+    "lint": "next lint"
   },
   "dependencies": {
     "@capacitor/android": "^7.1.0",
     "@capacitor/cli": "^7.1.0",
-    "@capacitor/core": "^7.1.0",
+    "@capacitor/core": "6.2.1",
+    "@capacitor/ios": "^6.2.1",
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "v1",
     "@internationalized/date": "^3.6.0",
@@ -39,24 +39,27 @@
     "@tanstack/react-table": "^8.20.6",
     "@tremor/react": "^3.18.7",
     "@typescript-eslint/parser": "^8.19.1",
+    "axios": "^1.8.4",
     "clsx": "^2.1.1",
     "cobe": "^0.6.3",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.13",
     "framer-motion": "^12.6.2",
     "geist": "^1.3.1",
+    "ios": "^0.0.1",
     "lucide-react": "^0.471.0",
     "mini-svg-data-uri": "^1.4.4",
     "motion": "^12.5.0",
-    "next": "14.2.23",
+    "next": "15.2.4",
     "next-themes": "^0.4.4",
     "nuqs": "^2.3.0",
-    "react": "^18.3.1",
+    "react": "19.1.0",
     "react-datepicker": "^8.1.0",
     "react-day-picker": "^9.6.3",
-    "react-dom": "^18.3.1",
+    "react-dom": "19.1.0",
     "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.54.2",
+    "react-icons": "^5.5.0",
     "recharts": "^2.15.0",
     "tailwind-merge": "^2.6.0",
     "tailwind-variants": "^0.3.0",
@@ -66,14 +69,18 @@
   "devDependencies": {
     "@faker-js/faker": "^9.3.0",
     "@types/node": "^22.10.5",
-    "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",
+    "@types/react": "19.0.12",
+    "@types/react-dom": "19.0.4",
     "eslint": "^8.57.1",
-    "eslint-config-next": "14.2.23",
+    "eslint-config-next": "15.2.4",
     "postcss": "^8.4.49",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.9",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.7.3"
+  },
+  "overrides": {
+    "@types/react": "19.0.12",
+    "@types/react-dom": "19.0.4"
   }
 }
