--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "@capacitor/android": "^7.1.0",
-    "@capacitor/cli": "^7.1.0",
-    "@capacitor/core": "6.2.1",
+    "@capacitor/cli": "^7.2.0",
+    "@capacitor/core": "^7.2.0",
     "@capacitor/ios": "^6.2.1",
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "v1",
