--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -8,3 +8,8 @@ django-cors-headers
 djangorestframework-simplejwt
 social-auth-app-django
 django-allauth
+inflection
+uritemplate
+drf-spectacular
+django-tailwind
+django-tailwind[reload]
