--- a/propius/.github/workflows/deploy.yml
+++ b/propius/.github/workflows/deploy.yml
@@ -32,13 +32,16 @@ jobs:
               echo "Criando diretório do projeto em: \$PROJECT_DsIR"
               mkdir -p "$PROJECT_DIR"
               cd "$PROJECT_DIR"
-              git clone git@github.com:seu-usuario/seu-repo.git .
+
+              git clone git@github.com:davifati/administramosImoveis.git .
+              git checkout production
+
             else
               cd "$PROJECT_DIR"
             fi
 
             # Atualize o código
-            git pull origin master || exit 1
+            git pull origin production || exit 1
 
             # Ative o ambiente virtual (ou crie se não existir)
             if [ ! -d "venv" ]; then
