--- a/.github/workflows/propius_deloy.yml
+++ b/.github/workflows/propius_deloy.yml
@@ -30,7 +30,7 @@ jobs:
 
             # Crie a pasta se não existir
             if [ ! -d "$PROJECT_DIR" ]; then
-              echo "Criando diretório do projeto em: \$PROJECT_DsIR"
+              echo "Criando diretório do projeto em: \$PROJECT_DIR"
               mkdir -p "$PROJECT_DIR"
               cd "$PROJECT_DIR"
 
@@ -41,7 +41,16 @@ jobs:
               cd "$PROJECT_DIR"
             fi
 
+            # Garante que estamos em um repo Git válido
+            if [ ! -d ".git" ]; then
+              echo "Erro: o diretório não é um repositório Git."
+              exit 1
+            fi
+
+
             # Atualize o código
+            git fetch origin production || exit 1
+            git checkout production || exit 1
             git pull origin production || exit 1
 
             # Ative o ambiente virtual (ou crie se não existir)
