--- a/.github/workflows/deploy_propius.yml
+++ b/.github/workflows/deploy_propius.yml
@@ -46,12 +46,13 @@ jobs:
 
 
 
-            echo "[STEP 3] Atualizando código"
+            echo "[STEP 2] Atualizando código"
             git fetch origin production || exit 1
             git checkout production || exit 1
             git pull origin production || exit 1
             echo "[✓] Código atualizado"
             
+            echo "Listing files in current directory:"
             ls -la
 
 
@@ -61,6 +62,7 @@ jobs:
               exit 1
             fi
             echo "[✓] Diretório é um repositório Git"
+
 
             echo "[STEP 4] Ativando/criando ambiente virtual"
             if [ ! -d "venv" ]; then
