--- a/.github/workflows/deploy_propius.yml
+++ b/.github/workflows/deploy_propius.yml
@@ -44,16 +44,19 @@ jobs:
             fi
             echo "[✓] Diretório pronto"
 
-
+            echo "Listing files in current directory:"
+            ls -la
 
             echo "[STEP 2] Atualizando código"
             git fetch origin production || exit 1
             git checkout production || exit 1
             git pull origin production || exit 1
             echo "[✓] Código atualizado"
-            
+
             echo "Listing files in current directory:"
             ls -la
+            
+
 
 
             echo "[STEP 2] Verificando se é um repositório Git"
