--- a/.github/workflows/deploy_propius.yml
+++ b/.github/workflows/deploy_propius.yml
@@ -45,7 +45,8 @@ jobs:
             echo "[✓] Diretório pronto"
 
             echo "[STEP 2] Atualizando código"
-            git clone git@github.com:davifati/administramosImoveis.git . || exit 1
+            #git clone git@github.com:davifati/administramosImoveis.git . || exit 1
+            git clone https://github.com/davifati/administramosImoveis.git . || exit 1
             git checkout production || exit 1
             git pull origin production || exit 1
             echo "[✓] Código atualizado"
@@ -54,7 +55,7 @@ jobs:
             ls -la
 
             exit 0 
-            
+
 
             echo "[STEP 2] Verificando se é um repositório Git"
             if [ ! -d ".git" ]; then
