--- a/.github/workflows/deploy_propius.yml
+++ b/.github/workflows/deploy_propius.yml
@@ -45,8 +45,8 @@ jobs:
             echo "[✓] Diretório pronto"
 
             echo "[STEP 2] Atualizando código"
-            #git clone git@github.com:davifati/administramosImoveis.git . || exit 1
-            git clone https://github.com/davifati/administramosImoveis.git . || exit 1
+            #git clone git@github.com:davifati/administramosImoveis.git  || exit 1
+            git clone https://github.com/davifati/administramosImoveis.git  || exit 1
             git checkout production || exit 1
             git pull origin production || exit 1
             echo "[✓] Código atualizado"
@@ -54,16 +54,11 @@ jobs:
             echo "Listing files in current directory:"
             ls -la
 
-            exit 0 
+            echo "[STEP 3] Entrando no diretório do projeto - propius/backend"
+            cd propius/backend
 
-
-            echo "[STEP 2] Verificando se é um repositório Git"
-            if [ ! -d ".git" ]; then
-              echo "Erro: o diretório não é um repositório Git."
-              exit 1
-            fi
-            echo "[✓] Diretório é um repositório Git"
-
+            echo "Listing files in current directory:"
+            ls -la
 
             echo "[STEP 4] Ativando/criando ambiente virtual"
             if [ ! -d "venv" ]; then
