--- a/.github/workflows/deploy_propius.yml
+++ b/.github/workflows/deploy_propius.yml
@@ -28,7 +28,7 @@ jobs:
             set -e
 
             echo "[STEP 1] Criando/entrando no diretório do projeto"
-            PROJECT_DIR="/root"
+            PROJECT_DIR="/root/servers"
 
             if [ ! -d "$PROJECT_DIR" ]; then
               echo "  > Diretório não existe, criando e clonando o repo"
@@ -45,8 +45,8 @@ jobs:
             echo "[✓] Diretório pronto"
 
             echo "[STEP 2] Atualizando código"
-            #git clone git@github.com:davifati/administramosImoveis.git  || exit 1
-            git clone https://github.com/davifati/administramosImoveis.git  || exit 1
+            #git clone git@github.com:davifati/administramosImoveis.git . || exit 1
+            git clone https://github.com/davifati/administramosImoveis.git . || exit 1
             git checkout production || exit 1
             git pull origin production || exit 1
             echo "[✓] Código atualizado"
