--- a/.github/workflows/deploy_propius.yml
+++ b/.github/workflows/deploy_propius.yml
@@ -9,7 +9,7 @@ on:
       - production
 
 jobs:
-  deploy-backend:
+  propius-deploy-backend:
     runs-on: ubuntu-latest
 
     steps:
@@ -78,7 +78,7 @@ jobs:
             if [ ! -d "venv" ]; then
               echo "  > venv não encontrado, criando"
               echo "  > Instalando python3.8-venv"
-              apt install -y python3.8-venv || exit 1
+              #apt install -y python3.8-venv || exit 1
               python3 -m venv venv || exit 1
             fi
             source venv/bin/activate || exit 1
