--- a/.github/workflows/deploy_propius.yml
+++ b/.github/workflows/deploy_propius.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Deploy Backend to CONTABO SERVER
         run: |
           echo "Deploying backend to CONTABO SERVER"
-          ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -v ${{ secrets.SSH_USER }}@212.56.42.99 << 'EOF'
+          ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -l ${{ secrets.SSH_USER }} -v 212.56.42.99 << 'EOF'
             set -e
 
             echo "[STEP 1] Criando/entrando no diretório do projeto"
@@ -75,15 +75,27 @@ jobs:
             echo "Listing files in current directory:"
             ls -la
 
-            echo "[STEP 4] Ativando/criando ambiente virtual"
+            echo "[STEP 4] Instalando e configurando pyenv"
+            if ! command -v pyenv &> /dev/null; then
+              echo "  > Instalando pyenv"
+              curl https://pyenv.run | bash || exit 1
+              echo 'export PYENV_ROOT="$HOME/.pyenv"' >> ~/.bashrc
+              echo 'command -v pyenv >/dev/null || export PATH="$PYENV_ROOT/bin:$PATH"' >> ~/.bashrc
+              echo 'eval "$(pyenv init -)"' >> ~/.bashrc
+              source ~/.bashrc
+            fi
+
+            echo "  > Instalando Python 3.12 via pyenv"
+            pyenv install 3.12.0 || exit 1
+            pyenv global 3.12.0 || exit 1
+
+            echo "[STEP 5] Ativando/criando ambiente virtual"
             if [ ! -d "venv" ]; then
               echo "  > venv não encontrado, criando"
-              echo "  > Instalando python3.8-venv"
-              apt install -y python3.8-venv || exit 1
-              python3 -m venv venv || exit 1
+              python -m venv venv || exit 1
             fi
             source venv/bin/activate || exit 1
-            echo "[✓] Ambiente virtual pronto"
+            echo "[✓] Ambiente virtual pronto com Python 3.12"
 
             echo "[STEP 5] Instalando dependências"
             pip install -r requirements.txt || exit 1
