--- a/.github/workflows/deploy_propius.yml
+++ b/.github/workflows/deploy_propius.yml
@@ -77,19 +77,19 @@ jobs:
             echo "Listing files in current directory:"
             ls -la
 
-            echo "[STEP 4] Instalando e configurando pyenv"
-            echo "  > Instalando Python 3.12"
+            echo "[STEP 4] Instalando e configurando Python"
+            echo "  > Instalando Python 3.10"
             sudo apt update
-            sudo apt install -y python3.12 python3.12-venv || exit 1
+            sudo apt install -y python3.10 python3.10-venv || exit 1
 
             echo "[STEP 5] Ativando/criando ambiente virtual"
             echo ""
             if [ ! -d "venv" ]; then
               echo "  > venv não encontrado, criando"
-              python3.12 -m venv venv || exit 1
+              python3.10 -m venv venv || exit 1
             fi
             source venv/bin/activate || exit 1
-            echo "[✓] Ambiente virtual pronto com Python 3.12"
+            echo "[✓] Ambiente virtual pronto com Python 3.10"
 
             echo "[STEP 6] Instalando dependências"
             echo ""
