--- a/.github/workflows/deploy_propius.yml
+++ b/.github/workflows/deploy_propius.yml
@@ -77,16 +77,31 @@ jobs:
             echo "Listing files in current directory:"
             ls -la
 
-            echo "[STEP 4] Instalando e configurando Python"
-            echo "  > Instalando Python 3.10"
+            echo "[STEP 4] Instalando e configurando Pyenv"
+            echo "  > Instalando dependências necessárias"
             sudo apt update
-            sudo apt install -y python3.10 python3.10-venv || exit 1
+            sudo apt install -y make build-essential libssl-dev zlib1g-dev \
+            libbz2-dev libreadline-dev libsqlite3-dev wget curl llvm \
+            libncursesw5-dev xz-utils tk-dev libxml2-dev libxmlsec1-dev libffi-dev liblzma-dev || exit 1
+
+            echo "  > Instalando Pyenv"
+            curl https://pyenv.run | bash || exit 1
+
+            echo "  > Configurando Pyenv"
+            echo 'export PYENV_ROOT="$HOME/.pyenv"' >> ~/.bashrc
+            echo 'command -v pyenv >/dev/null || export PATH="$PYENV_ROOT/bin:$PATH"' >> ~/.bashrc
+            echo 'eval "$(pyenv init -)"' >> ~/.bashrc
+            source ~/.bashrc
+
+            echo "  > Instalando Python 3.10 com Pyenv"
+            pyenv install 3.10.0 || exit 1
+            pyenv global 3.10.0 || exit 1
 
             echo "[STEP 5] Ativando/criando ambiente virtual"
             echo ""
             if [ ! -d "venv" ]; then
               echo "  > venv não encontrado, criando"
-              python3.10 -m venv venv || exit 1
+              python -m venv venv || exit 1
             fi
             source venv/bin/activate || exit 1
             echo "[✓] Ambiente virtual pronto com Python 3.10"
