--- a/.github/workflows/deploy_propius.yml
+++ b/.github/workflows/deploy_propius.yml
@@ -83,7 +83,8 @@ jobs:
             sudo apt install -y make build-essential libssl-dev zlib1g-dev \
             libbz2-dev libreadline-dev libsqlite3-dev wget curl llvm \
             libncursesw5-dev xz-utils tk-dev libxml2-dev libxmlsec1-dev libffi-dev liblzma-dev || exit 1
-
+            echo "  > Removendo instalação anterior do Pyenv"
+            rm -rf /root/.pyenv || exit 1
             echo "  > Instalando Pyenv"
             curl https://pyenv.run | bash || exit 1
 
