--- a/.github/workflows/deploy_propius.yml
+++ b/.github/workflows/deploy_propius.yml
@@ -44,7 +44,8 @@ jobs:
               cd "$PROJECT_DIR"
 
               echo "  > Clonando repositório"
-              git clone https://github.com/davifati/administramosImoveis.git . || exit 1
+              #git clone https://github.com/davifati/administramosImoveis.git . || exit 1
+              git clone git@github.com:davifati/administramosImoveis.git . || exit 1
               git checkout production || exit 1
             else
               echo "  > Diretório já existe"
