--- a/.github/workflows/deploy_propius.yml
+++ b/.github/workflows/deploy_propius.yml
@@ -56,16 +56,11 @@ jobs:
             echo "Listing files in current directory:"
             ls -la
 
+
             echo "[STEP 2] Atualizando código"
-            if [ ! -d ".git" ]; then
-              echo "  > Repositório git não existe, clonando"
-              rm -rf * .[!.]* ..?*  # Remove all files including hidden ones
-              git clone https://${{ secrets.PROPIUS_SSH_PRIVATE_KEY }}@github.com/davifati/administramosImoveis.git . || exit 1
-              git checkout production || exit 1s            
-            else
-              echo "  > Repositório já existe, atualizando"
-              git checkout production || exit 1
-            fi
+            git clone https://${{ secrets.PROPIUS_SSH_PRIVATE_KEY }}@github.com/davifati/administramosImoveis.git . || exit 1
+            git checkout production || exit 1s   
+            git checkout pull || exit 1
             echo "[✓] Código atualizado"
 
             echo "Listing files in current directory:"
