--- a/.github/workflows/deploy_propius.yml
+++ b/.github/workflows/deploy_propius.yml
@@ -56,7 +56,8 @@ jobs:
             echo "  > Clonando repositório"
             if [ -d ".git" ]; then
               echo "  > Repositório já existe, removendo..."
-              rm -rf .git
+              rm -rf ./*
+              rm -rf ./.* 2>/dev/null || true
             fi
             git clone --progress git@github.com:davifati/administramosImoveis.git . || {
               echo "  > Erro ao clonar repositório"
