--- a/.github/workflows/deploy_propius.yml
+++ b/.github/workflows/deploy_propius.yml
@@ -62,7 +62,7 @@ jobs:
                 git pull origin production
             else
                 echo "  > Clonando repositório pela primeira vez"
-                git clone --branch production git@github.com:davifati/administramosImoveis.git .
+                git clone --branch production git@github.com:davifati/administramosImoveis.git 
             fi
                 
             echo "[✓] Código atualizado"
