--- a/.github/workflows/deploy_propius.yml
+++ b/.github/workflows/deploy_propius.yml
@@ -66,7 +66,7 @@ jobs:
                 git pull origin production
             else
                 echo "  > Clonando repositório pela primeira vez"
-                git clone --branch production git@github.com:davifati/administramosImoveis.git 
+                git clone --branch production git@github.com:davifati/administramosImoveis.git . || exit 1
             fi
                 
             echo "[✓] Código atualizado"
