--- a/propius/backend/requirements.txt
+++ b/propius/backend/requirements.txt
@@ -2,7 +2,7 @@ djangorestframework
 markdown    
 django-filter
 django-extensions 
-pygraphviz
+#pygraphviz
 django-countries
 django-cors-headers
 djangorestframework-simplejwt
