--- a/propius/dashboard/.gitignore
+++ b/propius/dashboard/.gitignore
@@ -37,3 +37,11 @@ yarn-error.log*
 next-env.d.ts
 
 nothing.md
+
+.env
+.env.local
+.env.development
+.env.production
+.env.test
+.env.test.local
+.env.test.local
