--- a/propius/dashboard/package.json
+++ b/propius/dashboard/package.json
@@ -38,6 +38,7 @@
     "@tremor/react": "^3.18.7",
     "@typescript-eslint/parser": "^8.19.1",
     "axios": "^1.8.4",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cobe": "^0.6.3",
     "date-fns": "^3.6.0",
